--- a/scripts.yaml
+++ b/scripts.yaml
@@ -56,7 +56,7 @@ notify_liz_phone_cam:
       data:
         attachment:
           hide-thumbnail: false
-          url: https://h-a.twosquaredlove.duckdns.org/local/images/snapshot_cam_{{channel_number}}.jpg?{{now().strftime("%s")}}.jpg
+          url: https://twosquaredlove.duckdns.org/local/images/snapshot_cam_{{channel_number}}.jpg?{{now().strftime("%s")}}.jpg
       title: '{{message}}'
       message: '{{timestamp}}'
     service: notify.mobile_app_iphone
@@ -65,10 +65,10 @@ notify_patrick_phone_cam:
   sequence:
   - data_template:
       data:
-        image: https://h-a.twosquaredlove.duckdns.org/local/images/snapshot_cam_{{channel_number}}.jpg?{{now().strftime("%s")}}.jpg
+        image: https://twosquaredlove.duckdns.org/local/images/snapshot_cam_{{channel_number}}.jpg?{{now().strftime("%s")}}.jpg
         clickAction: https://www.dropbox.com/home/Apps/DVR163/ch{{channel_number}}?file={{file_name}}.jpg
         sticky: false
-        tag: motion_cam_{{channel_number}}
+        channel: Motion cam {{channel_number}}
       title: '{{message}}'
       message: '{{timestamp}}'
     service: notify.mobile_app_patrick_s_galaxy_s10
@@ -77,7 +77,7 @@ notify_pushbullet_cam:
   sequence:
   - data_template:
       data:
-        file_url: https://h-a.twosquaredlove.duckdns.org/local/images/snapshot_cam_{{channel_number}}.jpg?{{now().strftime("%s")}}.jpg
+        file_url: https://twosquaredlove.duckdns.org/local/images/snapshot_cam_{{channel_number}}.jpg?{{now().strftime("%s")}}.jpg
       title: '{{message}}'
       message: '{{timestamp}} {{now}}'
     service: notify.pushbullet
